hive-macro/tests/macro/should_fail/function_argument_ident.rs
#[hive_macro::hive_test]
fn test_function(wrong_ident: String, handle: String) {}

fn main() {}
